--- a/views/index.html
+++ b/views/index.html
@@ -2,14 +2,22 @@
 <html>
 <head>
 <style>
+body {
+  background-color: #000;
+}
 #guestbook {
+  padding: 20px;
+  background-color: #fff;
   margin: auto;
   width: 500px;
 }
 #guestbook input,
 #guestbook textarea {
+  padding: 0;
+  margin: 2px;
   height: 2em;
   width: 100%;
+  border: 1px solid #000;
 }
 #guestbook textarea {
   height: 5em;
