--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-image: url('/static/bg.jpg');
+  background-image: url('/static/bg.gif');
   background-color: #000;
 }
 #guestbook {
